fix: fix wrong literal